fixing spacing probs

--- a/kifi-backend/modules/shoebox/angular/src/layout/nav/navLibs.styl
+++ b/kifi-backend/modules/shoebox/angular/src/layout/nav/navLibs.styl
@@ -5,7 +5,7 @@
 
 .kf-nav-lib-system
   border-bottom: 1px solid separatorColor
-  padding: 8px 0 8px 0
+  padding-top: 16px
 
 .kf-nav-lib-item
   height: 45px
@@ -13,6 +13,9 @@
   padding-bottom: 8px
   user-select: none
   font-size: 12px
+
+.kf-create-new-library
+  padding: 8px 0 0 0
 
 .kf-nav-lib-separator
   margin-bottom: 10px
